# secret-santa

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.cargo/: config.toml  config.toml.example
migrations/: Cargo.toml
migrations/src/: lib.rs  m20231017_000001_create_user_table.rs  m20231109_000002_create_messages_table.rs
src/: bot.rs  handle_callback_query.rs  handle_message.rs  main.rs  states.rs  types.rs
src/db/: mod.rs
src/db/schema/: message.rs  user.rs
src/hendlers/: handle_callback_query.rs  handle_command.rs  handle_message.rs  mod.rs
src/templates/: stat_3_select_city_0.txt  state_1_start.txt  state_2_write_name.txt  state_2_write_name_0.txt  state_2_write_name_1.txt  state_4_wait_notify.txt  state_5_notify.txt  state_5_notify_1.txt
tests/: test.rs
tests/shared/: messages.rs  mod.rs  utils.rs
